--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.5",
+    "@primevue/forms": "^4.4.1",
+    "@tailwindcss/vite": "^4.1.16",
+    "@vee-validate/zod": "^4.15.1",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "primevue": "^4.4.1",
+    "tailwindcss": "^4.1.16",
+    "tailwindcss-primeui": "^0.6.1",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.2"
+    "vue-router": "^4.6.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.4.1",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
@@ -25,6 +33,7 @@
     "eslint-plugin-vue": "^10.5.1",
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
+    "unplugin-vue-components": "^29.1.0",
     "vite": "npm:rolldown-vite@7.1.14",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.0"
