--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vee-validate/zod": "^4.15.1",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
+    "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
     "tailwindcss": "^4.1.16",
     "tailwindcss-primeui": "^0.6.1",
