fix: update nginx configuration for Vue.js and enhance security headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
     
-    # Configuração para Vue.js (SPA)
+    # Configuração para Vue.js (SPA) - CORRIGIDO
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
     }
     
     # Cache para assets estáticos
@@ -21,7 +21,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'" always;
     
     # Configuração de compression
     gzip on;
@@ -36,4 +36,8 @@ server {
         application/javascript
         application/xml+rss
         application/json;
+    
+    # Logs personalizados para debug
+    error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log;
 }
