fix: correct Vue.js SPA configuration in nginx to remove 404 fallback

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
     
     # Configuração para Vue.js (SPA) - CORRIGIDO
     location / {
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ /index.html;
     }
     
     # Cache para assets estáticos
