--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,14 +13,14 @@ services:
     ports:
       - "3001:80"
     environment:
-      - VITE_NODE_ENV={{ VITE_NODE_ENV }}
-      - VITE_API_BASE_URL={{ VITE_API_BASE_URL }}
-      - VITE_API_BASE_URL_CSRF={{ VITE_API_BASE_URL_CSRF }}
-      - VITE_APP_TITLE={{ VITE_APP_TITLE }}
-      - VITE_APP_VERSION={{ VITE_APP_VERSION }}
-      - VITE_API_TIMEOUT={{ VITE_API_TIMEOUT }}
-      - VITE_ENABLE_MOCKS={{ VITE_ENABLE_MOCKS }}
-      - VITE_ENABLE_DEBUG={{ VITE_ENABLE_DEBUG }}
+      - VITE_NODE_ENV=${VITE_NODE_ENV}
+      - VITE_API_BASE_URL=${VITE_API_BASE_URL}
+      - VITE_API_BASE_URL_CSRF=${VITE_API_BASE_URL_CSRF}
+      - VITE_APP_TITLE=${VITE_APP_TITLE}
+      - VITE_APP_VERSION=${VITE_APP_VERSION}
+      - VITE_API_TIMEOUT=${VITE_API_TIMEOUT}
+      - VITE_ENABLE_MOCKS=${VITE_ENABLE_MOCKS}
+      - VITE_ENABLE_DEBUG=${VITE_ENABLE_DEBUG}
     networks:
       - grupi-dev-network
     healthcheck:
