fix: add project label to Docker Compose files for better service identification

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,6 +23,8 @@ services:
       - VITE_ENABLE_DEBUG=${VITE_ENABLE_DEBUG}
     networks:
       - grupi-dev-network
+    labels:
+      - "project=grupi"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80"]
       interval: 30s
