--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,7 +30,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-
+    labels:
+      - "project=grupi"
 networks:
   grupi-prod-network:
     driver: bridge
