--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -31,7 +31,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-
+    labels:
+      - "project=grupi"
 networks:
   grupi-local-network:
     driver: bridge
